fetchPrices is now a get
